2004-07-02  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_out.c:
	* src/xcbint.h:
	Force a response from the server if we haven't seen
	one in 65530 requests. If you don't do this, XCB
	gets confused the next time it waits for a reply.

2004-06-16  Keith Packard  <keithp@keithp.com>

	* src/client-c.xcb:
	* src/xcb.h.m4:
	Must round datatype lengths to 4-byte boundary for
	NEXTFIELD and End macros.  Created new XCB_TYPE_CEIL
	macro for this purpose and used it in a couple of
	places.  It is to be hoped that this represents all
	of the locations that need changing...